--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="stylin.com.stylin.MainActivity">
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/activity_main"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context="stylin.com.stylin.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+<ImageView
+    android:layout_width="32dp"
+    android:layout_height="32dp"
+    android:id="@+id/ivPreview"
+    tools:layout_editor_absoluteY="149dp" />
+
+<Button
+    android:text="Camera"
+    android:layout_width="88dp"
+    android:layout_height="48dp"
+    tools:layout_editor_absoluteY="416dp"
+    android:id="@+id/launchCameraButton"
+    android:layout_alignParentBottom="true"
+    android:onClick="onLaunchCamera"/>
+
 </RelativeLayout>
+
