--- a/app/src/main/res/layout/activity_rearrange.xml
+++ b/app/src/main/res/layout/activity_rearrange.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,5 +10,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="stylin.com.stylin.Rearrange"
     android:id="@+id/base">
+
+    <stylin.com.stylin.DrawOverlayView
+        android:id="@+id/dovRect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
