nicer main view

--- a/app/src/main/res/layout/activity_rearrange.xml
+++ b/app/src/main/res/layout/activity_rearrange.xml
@@ -20,4 +20,17 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true" />
 
+    <Button
+        android:text="Done Selecting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="117dp"
+        android:layout_marginStart="117dp"
+        android:layout_marginTop="447dp"
+        android:id="@+id/doneSelectButton" />
+
 </RelativeLayout>
