--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@ tools:context="stylin.com.stylin.MainActivity">
     android:visibility="invisible"
     android:onClick="onRearrangeView"
     android:layout_below="@+id/launchCameraButton"
+    android:layout_alignLeft="@+id/launchCameraButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
 
