--- a/app/src/main/res/layout/activity_rearrange.xml
+++ b/app/src/main/res/layout/activity_rearrange.xml
@@ -32,4 +32,12 @@
         android:layout_marginTop="447dp"
         android:id="@+id/doneSelectButton" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="92dp"
+        android:id="@+id/ivDrag" />
+
 </RelativeLayout>
